# Analytics-API

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/routers/: health.py  items.py
tests/: test_health.py  test_items.py
