[project]
name = "fastapi-analytics-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic"
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff", "black"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]